--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,17 @@
 :root{
-
-
+--text-primary: #212121;
+--text-secondary: #757575;
+--theme-color: #2196F3;
+--primary-font: roboto,sans-serif;
+--primary-white-color: #ffffff;
 
 }
 body{
-font-family: roboto,sans-serif;
-color: #212121;
+font-family: var(--primary-font);
+color: var(--text-primary);
+background-color: var(--primary-white-color);
+
+
 }
 ul,ol{
     list-style: none;
@@ -15,10 +21,23 @@ ul,ol{
 
 }
 .logo{
-
+font-family: Raleway;
+font-weight: bold;
+font-size: 26px;
+line-height: 1.12;
+letter-spacing: 0.03em;    
+color: var(--theme-color);
+text-decoration: none;
 }
-.logo-icon{
 
+.logo-icon{
+font-family: Raleway;
+font-weight: bold;
+font-size: 26px;
+line-height: 1.12;
+letter-spacing: 0.03em;    
+color: #000000;
+text-decoration: none;
 }
 .header-nav{
 
@@ -28,21 +47,56 @@ ul,ol{
 
 }
 .nav-pagination{
-
+font-weight: 500;
+font-size: 14px;
+line-height: 1.14;
+text-decoration: none;
+color: var(--text-primary);
+}
+.nav-pagination:hover,
+.nav-pagination:focus{
+color: var(--theme-color);   
 }
 /* Ссылка на вебсайт,телефонный номер */
 .nav-all{
-
+font-weight: 500;
+font-size: 14px;
+line-height: 1.14;
+text-decoration: none;
+color: var(--text-secondary);
+}
+.nav-all:hover
+.nav-all:focus{
+color: var(--theme-color);   
 }
 /* Уникальный контент страницы */
 .hero{
 
 }
 .hero-title{
+font-weight: 900;
+font-size: 44px;
+line-height: 1.36;
+text-align: center;
+letter-spacing: 0.06em;
+}
+.hero-button-text{
+color: #ffffff;
+
+font-weight: bold;
+font-size: 16px;
+line-height: 1.9;
+letter-spacing: 0.06em;
 
 }
 .hero-button{
+display: flex;
+align-items: center;
+text-align: center;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
 
+background: var(--theme-color); ;
 }
 /* Особенности */
 .special-section{
@@ -55,10 +109,18 @@ ul,ol{
 
 }
 .title-list{
-
+font-weight: bold;
+font-size: 14px;
+line-height: 1.14;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: var(--text-primary);
 }
 .title-text{
-
+font-size: 14px;
+line-height: 1.71;
+letter-spacing: 0.03em;
+color: var(--text-secondary);
 }
 
 
@@ -68,12 +130,16 @@ ul,ol{
 }
 
 .work-title{
-
+font-weight: bold;
+font-size: 36px;
+line-height: 1.16;
+text-align: center;
+letter-spacing: 0.03em;
+color: var(--text-primary);
 }
 .work-container{
 
 }
-
 /* Наша команда */
 .command{
 
@@ -85,6 +151,20 @@ ul,ol{
 .command-box{
 
 }
+.command-title-list{
+font-weight: 500;
+font-size: 16px;
+line-height: 1.18;
+letter-spacing: 0.03em;
+color: var(--text-primary);
+}
+.command-title-text{
+font-size: 16px;
+line-height: 1.18;
+color: var(--text-secondary);
+}
+
+
 /* футер */
 .footer{
 
@@ -93,8 +173,48 @@ ul,ol{
 
 }
 .address-text{
-    
+font-size: 14px;
+line-height: 1.7;
+letter-spacing: 0.03em;
+color: #ffffff;    
 }
 
-
-
+/* Партфолио */
+.main-button{
+background: #F5F4FA;
+border-radius: 4px;    
+font-weight: 500;
+font-size: 16px;
+line-height: 1.6;
+text-align: center;
+letter-spacing: 0.03em;
+color: #212121;    
+}
+.main-button:hover,
+.main-button:focus{
+background: #2196F3;
+box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+border-radius: 4px;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.6;
+text-align: center;
+letter-spacing: 0.03em;
+color: #FFFFFF;
+}
+.title-promo{
+color: var(--primary-white-color);
+}
+.main-title-list{
+font-weight: bold;
+font-size: 18px;
+line-height: 2.0;
+letter-spacing: 0.06em;
+color: var(--text-primary);
+}
+.main-title-text{
+font-size: 16px;
+line-height: 1.9;
+letter-spacing: 0.03em;
+color: var(--text-secondary);
+}
