--- a/css/styles.css
+++ b/css/styles.css
@@ -80,23 +80,19 @@ line-height: 1.36;
 text-align: center;
 letter-spacing: 0.06em;
 }
-.hero-button-text{
-color: #ffffff;
-
-font-weight: bold;
-font-size: 16px;
-line-height: 1.9;
-letter-spacing: 0.06em;
-
-}
 .hero-button{
 display: flex;
 align-items: center;
 text-align: center;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
-
-background: var(--theme-color); ;
+cursor: pointer;
+background: var(--theme-color);
+color: #ffffff;
+font-weight: bold;
+font-size: 16px;
+line-height: 1.9;
+letter-spacing: 0.06em;
 }
 /* Особенности */
 .special-section{
@@ -188,7 +184,8 @@ font-size: 16px;
 line-height: 1.6;
 text-align: center;
 letter-spacing: 0.03em;
-color: #212121;    
+color: var(--text-primary);
+cursor: pointer;    
 }
 .main-button:hover,
 .main-button:focus{
